# pglite

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-pg.sh  prepare-postgres.sh  tlsify-postgres.sh  update-pg-gen.sh
pglite/: Cargo.toml
pglite-buildtools/: Cargo.toml  tlsify-postgres.sh
pglite-buildtools/src/: lib.rs  main.rs  rewrite_globals.rs  rewrite_source_globals.rs  show_global_symbols.rs
pglite-buildtools/src/util/: path.rs
pglite-cli/: Cargo.toml
pglite-cli/src/: main.rs
pglite-manipulate/: Cargo.toml
pglite-manipulate/src/: main.rs  rewrite_source_globals.rs  show_globals.rs
pglite-sys/: .gitignore  Cargo.toml  bindings.h  build.rs  postgres-config  postgres-gen
pglite-sys/src/: error.rs  lib.rs  log.rs  shim.rs
pglite-sys/src/shim/: fs.c  miscadmin.c  pqsignal.c  ps_status.c  ps_status.rs
pglite/src/: lib.rs  main.rs
pglite/src/db/: bootstrap.rs  init.rs  mod.rs  postmaster.rs
postgres-config/src/include/: pg_config.h
postgres-gen/src/backend/bootstrap/: bootparse.c  bootscanner.c
postgres-gen/src/backend/parser/: gram.c  gram.h  scan.c
postgres-gen/src/backend/replication/: repl_gram.c  repl_scanner.c  syncrep_gram.c  syncrep_scanner.c
postgres-gen/src/backend/utils/adt/: jsonpath_gram.c  jsonpath_scan.c
postgres-gen/src/backend/utils/misc/: guc-file.c
postgres-gen/src/interfaces/ecpg/preproc/: c_kwlist_d.h  ecpg_kwlist_d.h  preproc.h
postgres-gen/src/pl/plpgsql/src/: pl_gram.c  pl_gram.h
postgres-gen/src/port/: pg_config_paths.h
