[package]
name = "pglite-buildtools"
version = "0.0.0"
edition = "2021"

[lib]
name = "pglite_buildtools"
path = "src/lib.rs"

[[bin]]
name = "pglite-buildtools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cexpr = "0.6"
clang = { version = "2.0", features = ["clang_8_0"] }
itertools = "0.10"
lazy_static = "1"
log = "0.4"
object = { version = "0.29", features = ["read", "write", "compression"] }
regex = "1.7"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4.4"
slog-stdlog = "4.1"
sloggers = "2.1"
structopt = "0.3"
