[package]
name = "pglite-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pglite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
pglite = { path = "../pglite" }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4.4"
slog-stdlog = "4.1"
sloggers = "2.1"
structopt = "0.3"
